--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ body { background-color: #000000;}
 
 
 <h3><strong>Tạm kết</strong></h3>
-<p>Đấy phần 1 mới ra thì mình chỉ nói sơ sơ thế thôi , Phần 1 mà có ra thì mình sẽ lắm miệng hơi chút...  </p>
+<p>Đấy phần 1 mới ra thì mình chỉ nói sơ sơ thế thôi , Phần sau mà có ra thì mình sẽ lắm miệng hơi chút...  </p>
 
 <p>Tất cả mình sẽ chia sẻ ở phần sau của blog nhé! Hẹn ko gặp lại các bạn </p>
 			<div id="atatags-819766751-610cf90348357">    </div>
